<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">QuietTime</string>
    <string name="instructions">When do you want to turn your ringer back on?</string>
    <string name="set">Time</string>
    <string name="never">Never</string>
    <string name="now">Now</string>
    <string name="done">Done</string>
    <string name="volume">Volume</string>
    <string name="ticker">Silenced for %s</string>
    <string name="notification_title">Silenced until %s</string>
    <string name="notification_text">Select to change or cancel</string>
    <plurals name="Nminutes">
        <item quantity="one">1 minute</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nhours">
        <item quantity="one">1 hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <string name="description">"Have you ever missed an important call because your ringer was
    off? Don't let it happen again! When this application is installed,
    each time you turn your ringer off you will be asked how long you
    would like your phone to be silent. After that period of time has
    passed, your ringer will be automatically turned back on."</string>
    <string name="info">Using <font fgcolor="#ffffffff"><b>Quite Time</b></font> is easy! 
    Just turn-off the ringer using the volume keys on the side of your phone.
    
    \n\nWhenever you set your ringer to <font fgcolor="#ffffffff"><b>silent</b></font> or 
    <font fgcolor="#ffffffff"><b>vibrate</b></font>, you will be prompted to enter
    the time at which you would like your ringer to be turned back on.
    If you set your phone to <font fgcolor="#ffffffff"><b>silent</b></font> or 
    <font fgcolor="#ffffffff"><b>vibrate</b></font> by mistake, 
    just turn the volume back up and the prompt will disappear.
    
    \n\nThe timer will always be initialized to the current time, so if you want to set
    the timer for two hours, just tap the hour <font fgcolor="#ffffffff"><b>+</b></font>
    button twice.
      
    \n\nOnce the timer has been set, a notification will appear
    in the notification bar 
    indicating the time remaining.  
    You can select the notification to <font fgcolor="#ffffffff"><b>adjust</b></font> 
    or <font fgcolor="#ffffffff"><b>cancel</b></font> the timer.  
    You can also cancel the timer at any time by simply turning on the ringer 
    using the volume keys on your phone.
    
    \n\nIf you decide you don\'t want to be prompted anymore, 
    just <font fgcolor="#ffffffff"><b>uninstall</b></font> the application.
    </string>
    <!-- Description of the button to increment value. [CHAR LIMIT=NONE] -->
    <string name="number_picker_increment_button">Increment</string>
    <!-- Description of the button to decrement value. [CHAR LIMIT=NONE] -->
    <string name="number_picker_decrement_button">Decrement</string>
</resources>
