<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/panel_background"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <LinearLayout
                style="@style/Theme.Translucent.NoTitleBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/main_text_color" />

                <include
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dip"
                    layout="@layout/time_picker" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_blue_dark"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/volume"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/main_text_color" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:showDividers="beginning" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dip"
                        android:src="@drawable/ic_volume_off_small"
                        tools:ignore="ContentDescription" />

                    <SeekBar
                        android:id="@+id/seek_volume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dip"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dip"
                        android:src="@drawable/ic_volume_small"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            style="@android:style/Holo.ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/never"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minEms="4"
                android:text="@string/never"
                android:textColor="@color/never_button_text_color"
                tools:ignore="NewApi" />

            <Button
                android:id="@+id/set"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minEms="4"
                android:text="@string/set"
                android:textColor="@color/chosen_button_time_color" />

            <Button
                android:id="@+id/now"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minEms="4"
                android:text="@string/now"
                android:textColor="@color/now_button_text_color" />

        </LinearLayout>

    </LinearLayout>

</merge>
